Fixes bug on firefox with social link colours

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,7 @@ body * {
 .social,
 .contact-button {
     font-size: 32px;
+    color: var(--text);
 }
 
 .title.home:hover,
